trying to fix the jumpy pan

--- a/Img/style.css
+++ b/Img/style.css
@@ -141,7 +141,7 @@ i {
 
 
 /* Modal Content (Image) */
-.modal-content {
+.pinch-zoom-image {
     width: 100%;
 }
 
